# hexa_ddd_template

./: .env.dist  .gitignore  Cargo.toml  eslint.config.mjs  package-lock.json  package.json  tailwind.config.cjs
assets/: htmx-response-target.min.js  main.js
src/core/entities/: Cargo.toml
src/core/libs/adapters/: Cargo.toml
src/core/libs/common/: Cargo.toml
src/core/libs/common/src/: config.rs  lib.rs  logs.rs  state.rs
src/core/libs/errors/: Cargo.toml
src/core/libs/errors/src/: lib.rs
src/core/libs/ui/: Cargo.toml
src/core/libs/ui/src/: ajax.rs  lib.rs
src/core/libs/ui/src/components/: mod.rs
src/core/libs/ui/src/layout/: app.rs
src/infrastructure/repositories/: Cargo.toml
src/interface/http/api/: Cargo.toml
src/interface/http/api/src/: lib.rs  not_found.rs
src/interface/http/front/: Cargo.toml
src/interface/http/front/src/: error.rs  lib.rs  not_found.rs
src/interface/http/server/: Cargo.toml
src/interface/http/server/src/: lib.rs
src/interface/http/server/src/middleware/: error.rs  mod.rs  request_id.rs
src/main/: Cargo.toml
src/main/src/: cmd.rs  main.rs
