[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.5.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sqlx = "0.8.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "json", "env-filter"] }
errors = { path = "../errors" }
adapters = { path = "../adapters" }
url = "2.5.4"
