[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
serde_json = "1.0.133"
yew = { version = "0.21.0", features = ["ssr"] }
serde = { version = "1.0.215", features = ["derive"] }
common = { path = "../../../core/libs/common" }
entities = { path = "../../../core/entities" }
ui = { path = "../../../core/libs/ui" }
