[package]
name = "http"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = "1.41.1"
tracing = "0.1.40"
uuid = { version = "1.11.0", features = ["v7"] }
axum = "0.7.9"
tower-http = { version = "0.6.2", features = ["fs", "trace", "request-id", "normalize-path", "add-extension"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tower = { version = "0.5.1", features = ["util"] }
sqlx = { version = "0.8.2", features = ["postgres"] }
front = { path = "../front" }
api = { path = "../api" }
common = { path = "../../../core/libs/common" }
